# eddie

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  TRADEMARKS.md  requirements.md
.claude/agents/: requirements-maintenance.md
.claude/references/: requirements-commit-convention.md
.claude/scripts/: check_requirements_conflicts.py  extract_requirements_changelog.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  publish-packages.json
.github/workflows/: ci.yml  example-hugo.yml  post-publish-registry-smoke.yml  publish-hugo-module.yml  publish-npm.yml  publish-pypi.yml  publish-rubygems.yml  release.yml
benchmarks/: README.md  benchmark.toml  relevance_labels.toml
benchmarks/queries/: fastapi_docs.json
docs/guides/: cms-gallery.md  github-actions.md  hugo.md  package-publishing.md
docs/plans/: 2026-02-28-static-agent-design.md  2026-03-01-phase2-qa-design.md  2026-03-01-phase2-qa-implementation.md
examples/: acceptance-suite.json  claims.edits.toml
hugo-module/: go.mod  hugo.toml
integrations/astro/: README.md
integrations/astro/npm/: README.md  package.json
integrations/astro/plugin/: install.sh
integrations/cli/gem/: LICENSE.txt  README.md  eddie-cli.gemspec
integrations/cli/npm/: README.md  package.json
integrations/cli/pypi/: README.md  pyproject.toml
integrations/cli/pypi/src/eddie_cli/: __init__.py  cli.py
integrations/docusaurus/: README.md
integrations/docusaurus/npm/: README.md  package.json
integrations/docusaurus/plugin/: install.sh
integrations/eleventy/: README.md
integrations/eleventy/npm/: README.md  package.json
integrations/eleventy/plugin/: install.sh
integrations/hugo/: README.md
integrations/hugo/npm/: README.md  package.json
integrations/hugo/plugin/: install.sh
integrations/jekyll/: README.md
integrations/jekyll/gem/: README.md  eddie-jekyll.gemspec
integrations/jekyll/plugin/: install.sh
integrations/mkdocs/: README.md
integrations/mkdocs/plugin/: install.sh
integrations/mkdocs/pypi/: README.md  pyproject.toml
integrations/mkdocs/pypi/src/eddie_mkdocs/: __init__.py  cli.py
integrations/mkdocs/pypi/src/eddie_mkdocs/scripts/: install.sh
integrations/shared/: README.md
integrations/shared/content/: eddie-corpus.json
integrations/shared/scripts/: render_eddie_corpus.py
requirements/: 0000-README.md  CHANGELOG.md
requirements/0100-indexing-pipeline/: 0000-high-level-requirements.md
requirements/0100-indexing-pipeline/0100-content-parsing/: 0110-markdown-content-parsing.md  0120-html-content-parsing.md
requirements/0100-indexing-pipeline/0200-chunking/: 0210-section-based-chunking.md
requirements/0100-indexing-pipeline/0300-embedding/: 0310-embedding-generation.md  0320-index-serialization.md
requirements/0200-search-runtime/: 0000-high-level-requirements.md
requirements/0200-search-runtime/0100-query-embedding/: 0110-query-embedding-wasm.md
requirements/0200-search-runtime/0200-vector-search/: 0210-cosine-similarity-search.md  (+1 more)
requirements/0300-qa-runtime/: 0000-high-level-requirements.md
requirements/0400-widget-ui/: 0000-high-level-requirements.md
requirements/0500-integration/: 0000-high-level-requirements.md
requirements/0600-configuration/: 0000-high-level-requirements.md
scripts/: benchmark_suite.py  capture-cms-gallery.sh  publish-hugo-module.sh  render_benchmark_report.py  report-asset-sizes.sh
scripts/gallery/: capture-shot.js  start-cms-demo.sh
src/: bm25.rs  chunk.rs  claims.rs  embed.rs  eval.rs  index.rs  lib.rs  main.rs  parse.rs  qa.rs  search.rs  wasm.rs
src/parse/: astro.rs  docusaurus.rs  eleventy.rs  hugo.rs  jekyll.rs  mkdocs.rs  mod.rs
tests/: cli.rs
tests/cli/: test_chunking.rs  test_html_parsing.rs  test_markdown_parsing.rs  test_model_config.rs  test_serialization.rs
widget/: build.sh
widget/src/: static-agent-widget.js  worker.js
(+41 files in other folders)
