[package]
name = "static-agent"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Semantic search and simple Q&A for static sites — index at build time, query in the browser via WASM"
repository = "https://github.com/jt55401/static-agent"
authors = ["Jason Grey"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "static-agent-cli"
path = "src/main.rs"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
