[package]
name = "eddie"
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-only"
description = "Semantic search and simple Q&A for static sites — index at build time, query in the browser via WASM"
repository = "https://github.com/jt55401/eddie"
authors = ["Jason Grey"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eddie"
path = "src/main.rs"

# --- Shared dependencies (all targets) ---
[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
brotli = "8"

# --- Native-only dependencies ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
walkdir = "2"
hf-hub = "0.4"
tokenizers = { version = "0.21", features = ["onig", "esaxx_fast"] }
ureq = { version = "2", features = ["json"] }

# --- WASM dependencies ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "WorkerGlobalScope"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
