[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jt55401-eddie-cli"
version = "0.2.0"
description = "Cross-platform launcher for the Eddie CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [
  { name = "Jason Grey" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.scripts]
eddie = "eddie_cli.cli:main"

[project.urls]
Homepage = "https://github.com/jt55401/eddie"
Repository = "https://github.com/jt55401/eddie"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
