[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eddie-mkdocs"
version = "0.2.3"
description = "Installer for integrating Eddie into MkDocs sites"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [
  { name = "Jason Grey" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
  "jt55401-eddie-cli>=0.2.3,<0.3.0"
]

[project.scripts]
eddie-mkdocs-install = "eddie_mkdocs.cli:main"

[project.urls]
Homepage = "https://github.com/jt55401/eddie"
Repository = "https://github.com/jt55401/eddie"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eddie_mkdocs = ["scripts/install.sh", "assets/*"]
